<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <com.payUMoney.sdk.PlasticLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/twelve"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:textColor="#ffffff"
            android:layout_marginBottom="@dimen/twelve"
            android:text="@string/recover_password" />
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/remembered_password" />

   </com.payUMoney.sdk.PlasticLinearLayout>

</ScrollView>