<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/plastic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo_color" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/slogan"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12sp"
                android:gravity="center"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/twelve"
                    android:drawableLeft="@drawable/message_icon"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/twelve"
                    android:drawableLeft="@drawable/password"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp" />

                <CheckBox
                    android:id="@+id/show_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/twelve"
                    android:button="@drawable/checkbox_selector"
                    android:text="@string/show_password" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/twelve"
                    android:background="@drawable/button1"
                    android:text="@string/login"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColorLink="#6ac451" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twelve">

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:text="@string/dont_have_account"
                    android:textColorLink="#6ac451" />
            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7sp"
                android:src="@drawable/security_icons" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>