<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/plastic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo_color" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/slogan"
                android:textSize="18dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="12sp"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginBottom="@dimen/twelve"
                    android:drawableLeft="@drawable/message_icon"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/twelve"
                    android:ems="10"
                    android:hint="@string/password"
                    android:paddingLeft="5dp"
                    android:drawableLeft="@drawable/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/twelve"
                    android:background="#c56100"
                    android:textColor="#ffffff"
                    android:text="Add account to device" />



            </LinearLayout>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7sp"
                android:src="@drawable/security_icons"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>